# CNN-Licence-Plate-Recognition

./: README.md  add_prediction_to_frame.py  check_gpu.py  frame_handler_for_prediction.py  gitignore  main_watch_camera.py  predict_license_plate.py  pyproject.toml  record_camera.py  watch_camera.py
